--- a/Task2/RationalNumberHandler.csproj
+++ b/Task2/RationalNumberHandler.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F36E8033-2DEC-4E77-9EDD-E84FF96F82F5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>RationalNumberHandler</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <AssemblyName>Task2</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
