--- a/MenteeTasks.Tests/MenteeTasks.Tests.csproj
+++ b/MenteeTasks.Tests/MenteeTasks.Tests.csproj
@@ -54,9 +54,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArabicToRomanConverter.cs" />
+    <Compile Include="ArabicToRomanConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RationalNumberHandler.cs" />
+    <Compile Include="RationalNumberHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
