--- a/AirportTask/AirportTask.csproj
+++ b/AirportTask/AirportTask.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="NLog" Version="4.6.5" />
     <PackageReference Include="NLog.Config" Version="4.6.5" />
+    <PackageReference Include="StyleCop" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
